--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.16.2",
     "framer-motion": "^12.23.16",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
